public/styles.css
body {
  margin: 0;
  padding: 0;
}

.container {
  margin: 0 auto;
  width: 300px;
  text-align: center;
  margin-bottom: 30px;
}

#button-say {
  cursor: pointer;
  width: 100%;
  height: 100px;
  font-size: 30px;
  font-weight: bold;

}

.select {
  width: 200px;
  margin: 5px;
}

.hidden {
  display: none;
}

.disabled {
  filter: blur(1px);
  pointer-events: none;
  cursor: not-allowed;
}

.loop-value {
  width: 50px;
}

h1 {
  margin-bottom: 10px;
}

h2 {
  margin-top: 0;
}

#footer {
  position: absolute;
  height: 25px;
  bottom: 0;
  text-align: center;
  width: 100%;
  margin-top: 5px;
}

#current-announcement-box {
  margin: 10px 0;
  padding: 5px;
  font-style: italic;
  border: 1px solid #eee;
}

select {
  height: 35px;
}

.top-label {
  width: 80px;
  text-align: left;
}

.select-container {
  position: relative;
}

#select-loading-actions {
  position: absolute;
  top: -10px;
  left: 5px;
}


#select-loading-voices {
  position: absolute;
  top: -10px;
  left: 5px;
}

#select-loading-templates {
  position: absolute;
  top: -10px;
  left: 5px;
}


#warningGradientOuterBarG{
	height:35px;
	width:200px;
	border:1px solid rgb(0,0,0);
	overflow:hidden;
	background-color:rgb(255,255,255);
	margin:auto;
	background: gradient(linear, 0% 0%, 0% 100%, from(rgb(255,255,255)), to(rgb(0,0,0)));
		background: -o-gradient(linear, 0% 0%, 0% 100%, from(rgb(255,255,255)), to(rgb(0,0,0)));
		background: -ms-gradient(linear, 0% 0%, 0% 100%, from(rgb(255,255,255)), to(rgb(0,0,0)));
		background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgb(255,255,255)), to(rgb(0,0,0)));
		background: -moz-gradient(linear, 0% 0%, 0% 100%, from(rgb(255,255,255)), to(rgb(0,0,0)));
	background: linear-gradient(top, rgb(255,255,255), rgb(0,0,0));
		background: -o-linear-gradient(top, rgb(255,255,255), rgb(0,0,0));
		background: -ms-linear-gradient(top, rgb(255,255,255), rgb(0,0,0));
		background: -webkit-linear-gradient(top, rgb(255,255,255), rgb(0,0,0));
		background: -moz-linear-gradient(top, rgb(255,255,255), rgb(0,0,0));
}

.warningGradientBarLineG{
	background-color:rgb(255,255,255);
	float:left;
	width:18px;
	height:150px;
	margin-right:30px;
	margin-top:-35px;
	transform:rotate(45deg);
		-o-transform:rotate(45deg);
		-ms-transform:rotate(45deg);
		-webkit-transform:rotate(45deg);
		-moz-transform:rotate(45deg);
}

.warningGradientAnimationG{
	width:295px;
	animation-name:warningGradientAnimationG;
		-o-animation-name:warningGradientAnimationG;
		-ms-animation-name:warningGradientAnimationG;
		-webkit-animation-name:warningGradientAnimationG;
		-moz-animation-name:warningGradientAnimationG;
	animation-duration:1.5s;
		-o-animation-duration:1.5s;
		-ms-animation-duration:1.5s;
		-webkit-animation-duration:1.5s;
		-moz-animation-duration:1.5s;
	animation-iteration-count:infinite;
		-o-animation-iteration-count:infinite;
		-ms-animation-iteration-count:infinite;
		-webkit-animation-iteration-count:infinite;
		-moz-animation-iteration-count:infinite;
	animation-timing-function:linear;
		-o-animation-timing-function:linear;
		-ms-animation-timing-function:linear;
		-webkit-animation-timing-function:linear;
		-moz-animation-timing-function:linear;
}



@keyframes warningGradientAnimationG{
	0%{
		margin-left:0px;
	}

	100%{
		margin-left:-48px;
	}
}

@-o-keyframes warningGradientAnimationG{
	0%{
		margin-left:0px;
	}

	100%{
		margin-left:-48px;
	}
}

@-ms-keyframes warningGradientAnimationG{
	0%{
		margin-left:0px;
	}

	100%{
		margin-left:-48px;
	}
}

@-webkit-keyframes warningGradientAnimationG{
	0%{
		margin-left:0px;
	}

	100%{
		margin-left:-48px;
	}
}

@-moz-keyframes warningGradientAnimationG{
	0%{
		margin-left:0px;
	}

	100%{
		margin-left:-48px;
	}
}

